@@ -15,6 +15,8 @@ $Id$
 6.6.0 Beta 3
 ============
 
+* [DanielPharos]: You can now "uninstall" gamemodes: just delete the addons-directory of that game.
+
 * [DanielPharos]: Read in two additional MOHAA surface flags. MOHAA .map file loading is still not
           - working properly though.
 
